[package]

name          = "syncbox"
version       = "0.2.3"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>"]
description   = "Concurrency utilities for Rust"
documentation = "https://carllerche.github.io/syncbox/syncbox"
homepage      = "https://github.com/carllerche/syncbox"
repository    = "https://github.com/carllerche/syncbox"
readme        = "README.md"
keywords      = ["concurrency", "threadpool", "queue", "mpmc"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
log = "0.3.2"
time = "0.1.32"

[dev-dependencies]
env_logger = "0.3.1"

[[test]]

name = "test"
path = "test/test.rs"
